# api-implementation/server/api/controllers/importers/typesrouter.ts
@@ -1,0 +1,7 @@
+import express from 'express';
+import controller from './controller';
+export default express
+  .Router()
+  .get('/', controller.allTypes)
+  ;
+
